--- a/raist_desktop/packages.config
+++ b/raist_desktop/packages.config
@@ -3,5 +3,6 @@
   <package id="MaterialDesignColors" version="1.2.2" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="3.0.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="RestSharp" version="106.9.0" targetFramework="net472" />
   <package id="ZXing.Net" version="0.16.5" targetFramework="net472" />
 </packages>
